--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,20 +15,35 @@
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.164"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.173" />
 
+
+    <ImageView
+        android:id="@+id/rdj_pic"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="300dp"
+        android:src="@drawable/rdj"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/marvel_generator_header"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/get_random_marvel_character"
         android:layout_width="220dp"
+
         android:layout_height="110dp"
         android:layout_marginStart="92dp"
         android:text="Get random marvel character"
         android:textSize="25dp"
+        android:backgroundTint="@color/french_rose"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="473dp">
+        app:layout_constraintTop_toBottomOf="@id/rdj_pic">
 
     </Button>
 
